<resources>
    <string name="app_name">KotlinChat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_message">Send</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="select_photo">Select Photo</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="kotlin_chat">Kotlin Chat</string>
    <string name="enter_email">Enter email</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
</resources>
