<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Authorization.RegisterActivity">


    <TextView
        android:text="@string/name"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edit_name"
        android:hint="name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/email"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edit_email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edit_password"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="Confirm Password"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/confirm_password"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/select_photo"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/avatar_empty"
        android:onClick="selectImage"
        android:layout_width="150dp"
        android:layout_height="150dp" />
    <Button
        android:text="@string/create_account"
        android:onClick="registerUser"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>